--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "bulma": "^1.0.4",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "next": "^15.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
