feat: blog articles page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "^15.4.3",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.89.0"
