--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "^15.4.3",
-    "next-mdx-remote": "^5.0.0",
+    "next-mdx-remote-client": "^2.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sass": "^1.89.0"
   },
   "devDependencies": {
