--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "bulma": "^1.0.4",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "hastscript": "^9.0.1",
     "lodash": "^4.17.21",
     "next": "^15.4.3",
     "next-mdx-remote-client": "^2.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sass": "^1.89.0"
