--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "bulma": "^1.0.4",
+    "date-fns-tz": "^3.2.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "hastscript": "^9.0.1",
